# AISAF

./: .gitignore  CMakeLists.txt  readme.md
include/: AISAFenum.h  _AISAF.h  audio.h  input.h  preferences.h  utility.h
src/: preferences.cpp
src/audio/: coreAudio.cpp  loadWav.cpp
src/input/: keyActions.cpp  pollInput.cpp  scancodes.cpp
